--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./libs/dropzone/dropzone.min.css" type="text/css" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/core.css">
     <title>zipimgs</title>
@@ -17,17 +18,16 @@
     </div>
     <div class="main">
         <div class="container">
-            <div class="uploadbox">
-                <form action="https://fundscat.com/api/upload" class="dropzone" id="my-awesome-dropzone">
-                    <div class="icon"><img src="./imgs/upload-solid.svg"></div>
+            <div class="uploadbox dropzone">
+                    <!-- <div class="icon"><img src="./imgs/upload-solid.svg"></div>
                     <div class="prompt">
                         <p>拖入 或 点选 JPG PNG GIF SVG 图片</p>
                         <p>单次限制 32张 X 5MB</p>
-                    </div>
-                </form>
+                    </div> -->
             </div>
-            <div class="resultbox hide">
-                <ul>
+            <div class="resultbox">
+                <div></div>
+                <!-- <ul>
                     <li class="clearfix">
                         <div class="left">
                             <div class="filename">filename.png</div>
@@ -44,7 +44,7 @@
                             <div class="proportion">-80%</div>
                         </div>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </div>
@@ -53,9 +53,10 @@
             Zipimgs.com Made by LZ
         </div>
     </div>
+    
+    <script src="./libs/dropzone/dropzone.min.js"></script>
     <script type="text/javascript" src="./js/core.js"></script>
-    <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css" type="text/css" />
+    
 </body>
 
 </html>
