--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="无损压缩图片">
+    <meta name="keywords" content="图像，压缩,jpg,png,gif,svg">
     <link rel="stylesheet" href="./libs/dropzone/dropzone.min.css" type="text/css" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/core.css">
-    <title>zipimgs</title>
+    <title>zipimgs.com - 免费压缩图像</title>
 </head>
 
 <body>
