--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,15 @@
     </div>
     <div class="main">
         <div class="container">
-            <div class="uploadbox dropzone">
+            <div class="uploadbox dropzone" id="dropzone">
                     <!-- <div class="icon"><img src="./imgs/upload-solid.svg"></div>
                     <div class="prompt">
                         <p>拖入 或 点选 JPG PNG GIF SVG 图片</p>
                         <p>单次限制 32张 X 5MB</p>
                     </div> -->
             </div>
-            <div class="resultbox">
-                <div></div>
-                <!-- <ul>
+            <div class="resultbox dropzone">
+                <ul>
                     <li class="clearfix">
                         <div class="left">
                             <div class="filename">filename.png</div>
@@ -46,7 +45,7 @@
                             <div class="proportion">-80%</div>
                         </div>
                     </li>
-                </ul> -->
+                </ul>
             </div>
         </div>
     </div>
