--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                     </div> -->
         </div>
         <div class="resultbox">
-            <div class="totalprogress">
+            <!-- <div class="totalprogress">
                 <div class="filescount">总体进度：<span>20/30</span></div>
                 <div class="progress-wrap">
                     <span class="progress-line"></span>
@@ -36,7 +36,7 @@
                 <div class="ctrl">
                     <a href="">下载全部</a>
                 </div>
-            </div>
+            </div> -->
             <div class="resultbox-wrap">
                 <ul>
                 </ul>
