dev:google ana and  style fix

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,15 @@
     <script src="./libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="./libs/dropzone/dropzone.min.js"></script>
     <script type="text/javascript" src="./js/core.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NQ6LL4EK0L"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-NQ6LL4EK0L');
+    </script>
 
 </body>
 
