--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
             Zipimgs.com Made by LZ
         </div>
     </div>
+    <script src="./js/config.js"></script>
     <script src="./libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="./libs/dropzone/dropzone.min.js"></script>
     <script type="text/javascript" src="./js/core.js"></script>
