--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="免费在线压缩图片">
-    <meta name="keywords" content="免费压缩,图像处理,压缩图片,在线压缩">
+    <meta name="keywords" content="免费压缩,图像压缩,在线压缩,PNG压缩,JPG压缩,GIF压缩,SVG压缩">
     <link rel="stylesheet" href="./libs/dropzone/dropzone.min.css" type="text/css" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/core.css">
